<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KtxPy</string>
    <string name="open_debug_logs">Open Debug Logs</string>
    <string name="layout_tv_last">Last</string>
    <string name="layout_tv_next">Next</string>
    <string name="layout_tv_replace">Replace</string>
    <string name="layout_tv_replaceAll">Replace All</string>
    <string name="text_to_search">Text to search</string>
    <string name="replacement">Replacement</string>
    <string name="cursor_actions">Cursor Actions</string>
    <string name="go_to_end">Go To End</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="move_left">Move Left</string>
    <string name="move_right">Move Right</string>
    <string name="home">Home</string>
    <string name="end">End</string>
    <string name="text_actions">Text Actions</string>
    <string name="switch_color_scheme">Switch Color Scheme</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="search_text">Search Text</string>
    <string name="action_mode">Action Mode</string>
    <string name="search_panel">Search Panel</string>
    <string name="code_navigation">Code Navigation</string>
    <string name="switch_language">Switch Language</string>
    <string name="format">Format</string>
    <string name="code_navi">Code Navigation</string>
    <string name="navi_err_msg">Code navigation not prepared or unsupported</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="err_crash_loop">"Exception in a thread with looper. Crash log is saved to crash-journal.log in private files directory. "</string>
    <string name="wordwrap">Wordwrap</string>
    <string name="show_crash_log">Open crash log</string>
    <string name="clear_crash_log">Clear crash log</string>
    <string name="line_number_visibility">Show line number</string>
    <string name="pin_line_number">Pin LineNumber</string>
    <string name="feature_switches">Feature Switches</string>
    <string name="magnifier">Magnifier</string>
    <string name="use_icu_library">Use ICU library</string>
    <string name="open_new_activity">Open new activity</string>
    <string name="open_lsp_activity">Open lsp activity</string>
    <string name="not_supported">Not supported</string>
    <string name="dialog_api_warning_msg">LSP works only on Android O or above</string>
    <string name="line_info_panel_position">Line Info Panel Position</string>
    <string name="fixed">Fixed</string>
    <string name="follow_scrollbar">Follow scrollbar</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="top_left">Top left</string>
    <string name="top_right">Top right</string>
    <string name="bottom_left">Bottom left</string>
    <string name="bottom_right">Bottom right</string>
    <string name="updating_caption">Installation</string>
    <string name="removing_caption">Uninstallation</string>
    <string name="establishing_handshake_message">Establishing handshake.\nPlease wait</string>
    <string name="wait_message">Please wait...</string>
    <string name="download_cctools">Downloading native tools</string>
    <string name="received">Received\u0020</string>
    <string name="from">\u0020from\u0020</string>
    <string name="bytes">\u0020bytes</string>
    <string name="download_file">Download</string>
    <string name="unpacking_file">Unpacking</string>
    <string name="error_downloading">Error downloading file, restart package manager and reinstall package</string>
    <string name="bad_archive">Bad or corrupted package file, restart package manager and reinstall package</string>
    <string name="sd_no_memory">No free space on SD card, need\u0020</string>
    <string name="sd_no_memory2">. Remove unnecessary files and install package again</string>
    <string name="cache_no_memory">No free space, need\u0020</string>
    <string name="cache_no_memory1">, but\u0020</string>
    <string name="cache_no_memory2">\u0020available. Remove unnecessary android applications and install package again</string>
    <string name="toolchain_selector">Quick install</string>
    <string name="toolchain_selectormsg">Select toolchains for quick installation. Later you can install other additional packages from Add-ons.</string>
    <string name="exit_dialog">Confirm exit</string>
    <string name="exit_dialog_text">Text has been modified, but not saved. Are you sure you want to exit?</string>
    <string name="exit_dialog_yes">Yes</string>
    <string name="exit_dialog_no">No</string>
    <string name="save_warn_dialog">Warning!</string>
    <string name="save_warn_text">Text has been modified, but not saved. Continue?</string>
    <string name="about_dialog">CCTools IDE</string>
    <string name="about_dialog_text">C/C++ on-board development tools\nVersion</string>
    <string name="about_dialog_text2">\nCopyright &#169; 2012-2013, Alexander Chukov</string>
    <string name="about_dialog_show">Home page</string>
    <string name="about_button">About</string>
    <string name="prefs_button">Settings</string>
    <string name="pref_updater">Check for available updates at startup</string>
    <string name="pref_toolbar">Toolbar</string>
    <string name="pref_syntax">Syntax highlighting</string>
    <string name="pref_linenumbers">Line numbers</string>
    <string name="pref_fontsize">Font size</string>
    <string name="pref_dialog_fontsize">Font size</string>
        <string name="preferences">Preferences</string>
        <string name="window_list">Windows</string>
    <string name="summary_actionbar_preference_compat">Choose the action bar\'s behavior.</string>
        <string name="send_email">Email to</string>
        <string name="special_keys">Special keys</string>
        <string name="select_text">Select text</string>
        <string name="copy_all">Copy all</string>
        <string name="paste">Paste</string>
        <string name="send_control_key">Send control key</string>
        <string name="send_fn_key">Send fn key</string>
        <string name="screen_preferences">Screen</string>
        <string name="title_statusbar_preference">Status bar</string>
        <string name="summary_statusbar_preference">Show/hide status bar.</string>
        <string name="dialog_title_statusbar_preference">Status bar</string>
        <string name="title_actionbar_preference">Action bar</string>
        <string name="dialog_title_actionbar_preference">Action bar behavior</string>
        <string name="title_orientation_preference">Screen orientation</string>
        <string name="summary_orientation_preference">Choose the screen orientation behavior.</string>
        <string name="dialog_title_orientation_preference">Screen orientation behavior</string>
        <string name="text_preferences">Text</string>
        <string name="title_utf8_by_default_preference">Default to UTF-8</string>
        <string name="summary_utf8_by_default_preference">Whether UTF-8 mode is enabled by default.</string>
        <string name="title_fontsize_preference">Font size</string>
        <string name="summary_fontsize_preference">Choose character height in points.</string>
        <string name="dialog_title_fontsize_preference">Font size</string>
        <string name="title_color_preference">Colors</string>
        <string name="summary_color_preference">Choose text color.</string>
        <string name="dialog_title_color_preference">Text color</string>
        <string name="keyboard_preferences">Keyboard</string>
        <string name="title_backaction_preference">Back button behavior</string>
        <string name="summary_backaction_preference">Choose what pressing the back button does.</string>
        <string name="dialog_title_backaction_preference">Back button behavior</string>
        <string name="title_controlkey_preference">Control key</string>
        <string name="summary_controlkey_preference">Choose control key.</string>
        <string name="dialog_title_controlkey_preference">Control key</string>
        <string name="title_fnkey_preference">Fn key</string>
        <string name="summary_fnkey_preference">Choose Fn key.</string>
        <string name="dialog_title_fnkey_preference">Fn key</string>
        <string name="title_ime_preference">Input method</string>
        <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
        <string name="dialog_title_ime_preference">Input method</string>
        <string name="shell_preferences">Shell</string>
        <string name="title_shell_preference">Command line</string>
        <string name="summary_shell_preference">Specify the shell command line.</string>
        <string name="dialog_title_shell_preference">Shell</string>
        <string name="title_termtype_preference">Terminal type</string>
        <string name="summary_termtype_preference">What terminal type to report to the shell.</string>
        <string name="dialog_title_termtype_preference">Terminal type</string>
        <string name="title_close_window_on_process_exit_preference">Close window on exit</string>
        <string name="summary_close_window_on_process_exit_preference">Whether a window should close when its shell exits.</string>
        <string name="title_verify_path_preference">Verify PATH entries</string>
        <string name="summary_verify_path_preference">Whether inaccessible directories should be removed from the PATH.</string>
        <string name="title_home_path_preference">HOME folder</string>
        <string name="summary_home_path_preference">Path to a writable folder to be used as HOME.</string>
        <string name="key_home_path_preference" translatable="false">home_path</string>
        <string name="alt_sends_esc">Alt key sends ESC</string>
        <string name="alt_sends_esc_summary_on">Alt key sends ESC.</string>
        <string name="alt_sends_esc_summary_off">Alt key does not send ESC.</string>
    <string name="summary_shellrc_preference">Shell startup commands.</string>
    <string name="dialog_title_shellrc_preference">Shell startup</string>
    <string name="key_source_sys_shrc_preference" translatable="false">source_sys_shrc</string>
    <string name="title_source_sys_shrc_preference">Source system mkshrc</string>
    <string name="summary_source_sys_shrc_preference">
        In application specific shell statup script source commands from system shell startup file (/system/etc/mkshrc).
        Depends from shell command line.
    </string>
    <string name="title_mouse_tracking_preference">Send mouse events</string>
        <string name="summary_mouse_tracking_preference">Whether tap and scroll events should be sent as escape sequences to the terminal.</string>
        <string name="title_use_keyboard_shortcuts">Use Keyboard Shortcuts</string>
        <string name="use_keyboard_shortcuts_summary_on">Ctrl-Tab: cycle window, Ctrl-Shift-N: new window, Ctrl-Shift-V: paste.</string>
        <string name="use_keyboard_shortcuts_summary_off">Keyboard shortcuts disabled.</string>
    <string name="title_thememode_preference">Theme Mode</string>
    <string name="summary_thememode_preference">Change Theme mode.</string>
    <string name="title_sizecalc_preference">Size calculation</string>
    <string name="summary_sizecalc_preference">When to calculate terminal screen size as work-aroud for old devices or some soft keyboard.</string>
    <string name="dialog_title_sizecalc_preference">Size calculation method</string>
    <string name="dialog_title_thememode_preference">Theme Mode</string>
    <string name="key_shellrc_preference" translatable="false">shrc</string>
    <string name="title_shellrc_preference">Shell startup</string>
    <string name="help">Help</string>
</resources>