<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~    sora-editor - the awesome code editor for Android
  ~    https://github.com/Rosemoe/sora-editor
  ~    Copyright (C) 2020-2022  Rosemoe
  ~
  ~     This library is free software; you can redistribute it and/or
  ~     modify it under the terms of the GNU Lesser General Public
  ~     License as published by the Free Software Foundation; either
  ~     version 2.1 of the License, or (at your option) any later version.
  ~
  ~     This library is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~     Lesser General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Lesser General Public
  ~     License along with this library; if not, write to the Free Software
  ~     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301
  ~     USA
  ~
  ~     Please contact Rosemoe by email 2073412493@qq.com if you need
  ~     additional information or have any questions
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/cursor_actions">
        <menu>
            <item
                android:id="@+id/goto_end"
                android:title="@string/go_to_end" />
            <item
                android:id="@+id/move_up"
                android:title="@string/move_up" />
            <item
                android:id="@+id/move_down"
                android:title="@string/move_down" />
            <item
                android:id="@+id/move_left"
                android:title="@string/move_left" />
            <item
                android:id="@+id/move_right"
                android:title="@string/move_right" />
            <item
                android:id="@+id/home"
                android:title="@string/home" />
            <item
                android:id="@+id/end"
                android:title="@string/end" />
        </menu>
    </item>
            <item
                android:id="@+id/search_panel_st"
                android:checkable="true"
                android:title="@string/search_panel" />

    <item android:title="@string/feature_switches">
        <menu>
            <item
                android:id="@+id/text_wordwrap"
                android:checkable="true"
                android:title="@string/wordwrap" />
            <item
                android:id="@+id/editor_line_number"
                android:checkable="true"
                android:checked="true"
                android:title="@string/line_number_visibility" />
            <item
                android:id="@+id/pin_line_number"
                android:checkable="true"
                android:title="@string/pin_line_number" />
            <item
                android:id="@+id/magnifier"
                android:checkable="true"
                android:checked="true"
                android:title="@string/magnifier" />
            <item
                android:id="@+id/useIcu"
                android:checkable="true"
                android:checked="true"
                android:title="@string/use_icu_library" />
        </menu>
    </item>
    <item
        android:id="@+id/code_format"
        android:title="@string/format" />
    <item
        android:id="@+id/switch_colors"
        android:title="@string/switch_color_scheme" />
    
    <item
        android:id="@+id/text_undo"
        android:icon="@drawable/undo"
        android:title="@string/undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/text_redo"
        android:icon="@drawable/redo"
        android:title="@string/redo"
        app:showAsAction="always" />
    <item
        android:id="@+id/Save"
        android:icon="@drawable/round_save_20"
        android:title="@string/redo"
        android:iconTint="#FFFFFF"
        app:showAsAction="always"
        >

    </item>
</menu>