<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2007 The Android Open Source Project
 * Copyright (C) 2017-2021 Roumen Petrov.  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/session_select_text"
            android:title="@string/select_text"/>

        <item
            android:id="@+id/session_copy_all"
            android:title="@string/copy_all"/>

        <item
            android:id="@+id/session_paste"
            android:title="@string/paste"/>

    </group>

    <item
        android:id="@+id/session_paste_script"
        android:title="Paste Script"/>

    <item
        android:id="@+id/session_send_cntr"
        android:title="@string/send_control_key"/>

    <item
        android:id="@+id/session_send_fn"
        android:title="@string/send_fn_key"/>

</menu>
