<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (c) 2018 Roumen Petrov.  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_window_list"
        android:icon="@drawable/ic_windows_white_24dp"
        android:title="@string/window_list"/>

    <item
        android:id="@+id/nav_preferences"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/preferences"/>

    <group>

        <item
            android:id="@+id/nav_special_keys"
            android:icon="@drawable/ic_vpn_key_white_24dp"
            android:title="@string/special_keys"/>

        <item
            android:id="@+id/nav_action_help"
            android:icon="@drawable/ic_help_outline_white_24dp"
            android:title="@string/help"/>

    </group>

    <item
        android:id="@+id/nav_send_email"
        android:icon="@drawable/ic_email_white_24dp"
        android:title="@string/send_email"/>

</menu>
